exports[`<List /> should render avatar with avatar li 1`] = `
<ul
  className="mdc-list mdc-list--avatar-list">
  <li
    className="mdc-list-item">
    <img
      alt="Picture of Janet Perkins"
      className="mdc-list-item__start-detail"
      height="56"
      src="/users/1/profile_pic.png"
      width="56" />
    Janet Perkins
  </li>
  <li
    className="mdc-list-item">
    <img
      alt="Picture of Mary Johnson"
      className="mdc-list-item__start-detail"
      height="56"
      src="/users/2/profile_pic.png"
      width="56" />
    Mary Johnson
  </li>
  <li
    className="mdc-list-item">
    <img
      alt="Picture of Peter Carlsson"
      className="mdc-list-item__start-detail"
      height="56"
      src="/users/3/profile_pic.png"
      width="56" />
    Peter Carlsson
  </li>
</ul>
`;

exports[`<List /> should render dense with basic li 1`] = `
<ul
  className="mdc-list mdc-list--dense">
  <li
    className="mdc-list-item">
    Item One
  </li>
  <li
    className="mdc-list-item">
    Item Two
  </li>
</ul>
`;

exports[`<List /> should render with basic li 1`] = `
<ul
  className="mdc-list">
  <li
    className="mdc-list-item">
    Item One
  </li>
  <li
    className="mdc-list-item">
    Item Two
  </li>
</ul>
`;
